--- a/systemd/cloud-netconfig.service
+++ b/systemd/cloud-netconfig.service
@@ -3,4 +3,4 @@ Description=Update cloud-netconfig Setup
 
 [Service]
 Type=oneshot
-ExecStart=-/bin/bash -c '/sbin/netconfig -m cloud-netconfig update'
+ExecStart=-/bin/bash -c '%SCRIPTDIR%/cloud-netconfig'
